syntax = "proto3";
package listah.v1;

option go_package = "cornucopia/listah/apps/api/internal/pkg/proto/v1";


import "google/protobuf/timestamp.proto";

enum AuditUpdaterEnum {
  AUDIT_UPDATER_ENUM_UNSPECIFIED = 0;
  AUDIT_UPDATER_ENUM_FRONTEND = 1;
  AUDIT_UPDATER_ENUM_SYSOPS = 2;
}

message Pagination {
  int32 page_number = 1;
  int32 records_per_page = 2;
  map<string, string> sort_condition = 3;
}
